--- a/project-job.yaml
+++ b/project-job.yaml
@@ -3,7 +3,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: batchjob
-  namespace: tosingularity
+  namespace: argocd
 spec:
   selector: {}
   template:
